fail_crate/tests/rename_and_no_prefix.rs
use inew::New;

#[derive(New)]
#[new(rename = "create", no_prefix)]
enum A {}

fn main() {}
